# Tidal-Playlist-Exporter

./: pyproject.toml
src/playlist_exporter/: api_client.py  formatter.py  main.py
src/tpex/: api_client.py  exporter.py  formatter.py  main.py
tests/data/: api_playlist.json  client_album_details_all_returns.json  client_artist_details_all_returns.json  client_playlist_data.json  client_playlist_details_all_returns.json  client_track_details_all_returns.json
